<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/gris"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenido"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/azul"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/txtAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Conectando con la API..."
        android:textColor="@color/azul_oscuro"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"
        android:gravity="center" />

    <ProgressBar
        android:id="@+id/progressBarMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnReintentar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone"
        android:backgroundTint="@color/amarillo"
        android:text="@string/retry_connection"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:spacing="12dp">

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/azul_oscuro"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/azul"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>